# sol

./: .env.example  .gitignore  .vercelignore  README_DEPLOY.md  app.py  main.py  pyproject.toml  render.yaml  requirements.txt  vercel.json
.local/skills/create-artifact/: .fingerprint
.local/skills/mockup-extract/: .fingerprint
.local/skills/mockup-graduate/: .fingerprint
.local/skills/mockup-sandbox/: .fingerprint
.local/skills/remove-image-background/: .fingerprint
.local/skills/revenuecat/: .fingerprint
.local/skills/stripe/: .fingerprint
.local/skills/workflows/: .fingerprint
.local/state/replit/: log-query.db  log-query.db-shm  log-query.db-wal
.local/state/scribe/: scribe.db-shm  scribe.db-wal
.local/state/workflow-logs/-mdHUfrdnHGf3yTTJkiDD/: metadata.json
LangChainIntegration/: app.py  main.py  models.py  pyproject.toml
LangChainIntegration/attached_assets/: Pasted-import-os-import-speech-recognition-as-sr-import-pyttsx3-from-langchain-chat-models-import-ChatOpenA-1743980143673.txt
LangChainIntegration/static/css/: styles.css
LangChainIntegration/static/js/: script.js
LangChainIntegration/templates/: index.html
attached_assets/: Pasted--Fix-quote-issue-and-re-save-the-correct-version-of-Sol-Gradio-v1-0-sol-code-fixed-import-os-1743982589910.txt  Pasted-import-os-import-sqlite3-from-datetime-import-datetime-import-requests-Load-API-key-from-Replit-S-1743979656124.txt
instance/: sol_memory.db
public/css/: styles.css
public/js/: script.js
static/css/: styles.css
static/js/: script.js
templates/: index.html
(+33 files in other folders)
