[project]
name = "sol-space"
version = "0.1.0"
description = "Flask chat app for Vercel + Supabase"
requires-python = ">=3.11,<3.13"
dependencies = [
    "email-validator==2.3.0",
    "flask==3.1.2",
    "flask-sqlalchemy==3.1.1",
    "gunicorn==23.0.0",
    "psycopg2-binary==2.9.11",
    "requests==2.32.5",
    "sqlalchemy==2.0.48",
]
